--- a/src/sections/footer/footer.css
+++ b/src/sections/footer/footer.css
@@ -1,14 +1,15 @@
 footer {
+  background-color: #060b27;
   background-image: url("../../assets/footerBG.png");
   background-position: center;
   background-size: cover;
-  padding: 100px 55px 40px;
+  padding: 100px 0px 40px;
   width: 100%;
-  height: 586.38px;
+  height: 570px;
   margin-top: 140px;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
 }
 
@@ -32,6 +33,7 @@ footer .sub h1 {
   color: #f6f6f7;
 }
 footer .sub input {
+  width: 100%;
   padding: 10px 27px;
   background: #0e1330;
   border: 1px solid #282d45;
@@ -40,6 +42,7 @@ footer .sub input {
   color: white;
 }
 footer .sub button {
+  width: 100%;
   padding: 15px 85px;
   background: #7214ff;
   border-radius: 36px;
@@ -56,7 +59,7 @@ footer .links-wrap {
   align-items: center;
 }
 footer .links-wrap ul {
-  margin-left: 120px;
+  margin-left: 158px;
 }
 footer .links-wrap ul h1 {
   font-family: Arial, Helvetica, sans-serif;
@@ -80,20 +83,31 @@ footer .links-wrap ul li:hover {
   color: #cacdd4;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
   footer {
-    width: 100%;
     height: fit-content;
+    padding: 20px;
+  }
+
+  footer .links-wrap ul {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  footer {
+    padding: 20px 0px;
     margin-top: 100px;
     flex-direction: column;
+    align-items: center;
   }
 
   footer .links-wrap {
-    margin-top: 40px;
-  }
-  footer .links-wrap ul {
     margin-left: 0px;
-    margin-right: 20px;
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-around;
   }
 }
 
@@ -111,14 +125,5 @@ footer .links-wrap ul li:hover {
     width: 100%;
     height: fit-content;
     align-items: center;
-  }
-  footer .links-wrap {
-    margin-top: 40px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  footer .links-wrap ul {
-    margin-right: 0px;
   }
 }
