--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -18,6 +18,7 @@
   align-items: center;
 }
 .section1 h1 {
+  font-family: Arial, Helvetica, sans-serif;
   margin-top: 71.32px;
   font-weight: 900;
   font-size: 64px;
@@ -25,7 +26,11 @@
   text-align: center;
 }
 .section1 h2 {
+  width: 93vw;
+  height: fit-content;
+  padding-bottom: 5px;
   margin-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 900;
   font-size: 64px;
   line-height: 70px;
@@ -34,6 +39,8 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  text-fill-color: transparent;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .section1 p {
   font-size: 18px;
@@ -48,6 +55,9 @@
 .btns .btn1 {
   padding: 15px 25px;
   background: #7214ff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 900;
+  line-height: 16px;
   border-radius: 36px;
   color: #ffffff;
   margin-right: 30px;
@@ -61,6 +71,9 @@
     rgba(21, 25, 52, 0.08) 49.66%,
     rgba(21, 25, 52, 0.49) 87.77%
   );
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 900;
+  line-height: 16px;
   border: 1.2px solid #282d45;
   border-radius: 46px;
   color: #f6f6f7;
