--- a/src/sections/services/services.css
+++ b/src/sections/services/services.css
@@ -1,15 +1,27 @@
+.services {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+.wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  width: fit-content;
+}
 .services .heading {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 109px;
-  padding: 0 60px;
   margin-bottom: 60px;
 }
 .services .heading h1 {
   font-family: Arial, Helvetica, sans-serif;
   width: 712px;
-  height: 192px;
+  height: fit-content;
   font-weight: 900;
   font-size: 56px;
   line-height: 64px;
@@ -27,15 +39,17 @@
 }
 
 .services-wrap {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(393px, 393px));
+  grid-template-columns: repeat(3, 393px);
+  grid-template-rows: repeat(2, 299px);
   grid-gap: 24px;
   justify-content: center;
 }
 .services-wrap .service-box {
   padding: 30px 40px 30px 30px;
   width: 393px;
-  height: 275px;
+  height: 299px;
   background: #0e1330;
   border: 1px solid #282d45;
   border-radius: 4px;
@@ -55,13 +69,28 @@
   margin: 32px 0px 12px 0px;
 }
 .services-wrap .service-box p {
+  font-size: 16px;
   line-height: 24px;
   color: #8f9bb7;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1270px) {
+  .services-wrap {
+    grid-template-columns: repeat(2, 393px);
+    grid-template-rows: repeat(3, 299px);
+  }
+}
+@media screen and (max-width: 875px) {
+  .services-wrap {
+    grid-template-columns: repeat(1, 393px);
+    grid-template-rows: repeat(6, 299px);
+  }
+}
+
+@media screen and (max-width: 1200px) {
   .services .heading {
     flex-direction: column;
+    align-items: flex-start;
     margin-top: 100px;
     padding: 0 50px;
     margin-bottom: 60px;
@@ -72,6 +101,7 @@
   }
   .services .heading p {
     width: 100%;
+    height: fit-content;
     margin-top: 10px;
   }
 }
@@ -84,13 +114,21 @@
   .services .heading h1 {
     height: fit-content;
   }
-
+  .services .heading p {
+    margin-left: 0px;
+    width: 90%;
+    height: fit-content;
+    margin-top: 10px;
+  }
   .services-wrap {
-    grid-template-columns: repeat(auto-fill, minmax(320px, 320px));
+    grid-template-columns: repeat(1, 320px);
+    grid-template-rows: repeat(6, 299px);
+    grid-gap: 0px;
+    justify-content: center;
   }
   .services-wrap .service-box {
-    padding: 20px;
     width: 320px;
     height: fit-content;
+    padding: 20px;
   }
 }
