--- a/src/sections/guides/guides.css
+++ b/src/sections/guides/guides.css
@@ -167,13 +167,13 @@
 .guides .card2 .right {
   margin-left: 100px;
   width: 60%;
-  background-image: url("../../assets/Bg\ Shape\ \(3\).png");
+  background-image: url("../../assets/Bg Shape (3).png");
   background-position: center;
   background-size: cover;
 }
 .guides .card2 .right img {
   height: 100%;
-  background-image: url("../../assets/Bg\ Shape\ \(2\).png");
+  background-image: url("../../assets/Bg Shape (2).png");
   background-position: center;
   background-size: cover;
   padding: 30px 70px;
