--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -5,7 +5,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
+position: relative;
+z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +25,8 @@
   font-size: 64px;
   line-height: 70px;
   text-align: center;
+  animation: slide-up 1s linear forwards;
+  z-index: -1;
 }
 .section1 h2 {
   width: 93vw;
@@ -41,17 +44,41 @@
   background-clip: text;
   text-fill-color: transparent;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  animation: slide-up 1s linear forwards;
+  z-index: -1;
 }
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .section1 p {
   font-size: 18px;
   text-align: center;
   line-height: 26px;
   color: #8f9bb7;
   margin: 34px 0px;
+  opacity: 0;
+  animation: opacity 1s linear 1s forwards;
+  z-index: -1;
 }
 .section1 .btns {
   display: flex;
+  opacity: 0;
+  animation: opacity 1s linear 1s forwards;
 }
+@keyframes opacity {
+  100% {
+    opacity: 1;
+  }
+}
+
 .btns .btn1 {
   padding: 15px 25px;
   background: #7214ff;
@@ -145,6 +172,7 @@
   color: #ddeffa;
 }
 .section2 .info-boxes .info-box .value {
+  display: flex;
   font-weight: 600;
   font-size: 58px;
   line-height: 70px;
