--- a/src/sections/navbar/navbar.css
+++ b/src/sections/navbar/navbar.css
@@ -4,6 +4,17 @@ nav {
   align-items: center;
   padding: 25px 200px;
   border-bottom: 1px solid #151934;
+  animation: slide-down 1s linear forwards;
+  position: relative;
+  z-index: 11;
+}
+@keyframes slide-down {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .logo {
@@ -35,27 +46,17 @@ nav {
   opacity: 1;
 }
 
-.profile-link {
+.external-link {
   text-decoration: none;
   padding: 15px 25px;
   gap: 10px;
   background: #7214ff;
   border-radius: 36px;
   color: #ffffff;
-  font-weight: 900;
-}
-.external-link {
-  text-decoration: none;
-  padding: 15px 25px;
-  gap: 10px;
-  border:2px solid  #7214ff;
-  background: transparent;
-  border-radius: 36px;
-  color: #ffffff;
-  font-weight: 900;
+  font-weight: 700;
 }
 nav svg,
-svg {
+ul svg {
   display: none;
 }
 
